# secret-hitler-anchor

./: Cargo.toml
anchor-program/: Anchor.toml
anchor-program/programs/secret-hitler/src/instructions/: start_game.rs
anchor-program/tests/: init_game_with_vaults.ts  unhappy-secret-hitler.ts
backend/: Cargo.toml
backend/migrations/: 20240927112934_initial.sql
backend/src/: db.rs  main.rs  rest.rs  solana.rs
backend/src/models/: game.rs
