[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = "0.6.20"
dotenv = "0.15.0"
serde = "1.0.210"
solana-client = "2.0.11"
solana-sdk = "2.0.11"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.40.0", features = ["full"] }
